--- a/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/Views/Partials/Navigation/TopNavigation.cshtml
@@ -62,6 +62,10 @@
         : currentLang.ToUpper();
 }
 
+
+
+
+
 <!-- Navigation Links -->
 <a class="nav-link @Html.Raw(Model.Id == site.Id ? "nav-link--active" : "")" href="@site.Url()">@site.Name</a>
 
@@ -99,8 +103,8 @@
 
 
 <!-- Dynamic Language Dropdown -->
-<div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+<div class="dropdown section--themed">
+    <button class="btn btn-primary dropdown-toggle " type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
         <span id="languageDropdownText">@currentLanguageDisplayName</span>
     </button>
     <ul class="dropdown-menu" aria-labelledby="languageDropdown">
